@@ -1,5 +1,6 @@
 TBD - 0.9.4
 - Syncronize RX Freq with the satellite downlink combobox.
+- Bugfix: Updated the DB to fix the name of a table.
 - Bugfix: When adding a QSO, if the QSL is marked as received, KLog showed a SQL error.
 
 April - 0.9.3
